[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arrhythmia"
version = "0.1.0"
description = "12-lead ECG arrhythmia classification on PTB-XL using InceptionTime + Attention"
authors = [{ name = "Revant Bisht" }]
requires-python = ">=3.9"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["arrhythmia"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=arrhythmia --cov-report=term-missing -v"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
ignore_missing_imports = true
